# doccano

./: .gitignore  README.md  app.json  heroku.yml
.github/workflows/: ci.yml  publish-image.yml  publish.yml
backend/: cli.py  pyproject.toml
backend/examples/views/: example.py
cloud/azure/: azure-pipelines.yaml
docker/: Dockerfile  Dockerfile.heroku  Dockerfile.prod  docker-compose.prod.yml
frontend/: global.d.ts  nuxt.config.js  package.json
frontend/assets/css/: fonts.css
frontend/assets/style/: context.css  example.css
frontend/components/example/: DocumentList.vue
frontend/components/layout/: TheHeader.vue
frontend/components/tasks/metadata/: ContextMetadata.vue  ListMetadata.vue
frontend/components/tasks/toolbar/forms/: FormComment.vue
frontend/pages/: index.vue
frontend/pages/projects/_id/: index.vue
frontend/pages/projects/_id/intent-detection-and-slot-filling/: index.vue
frontend/pages/projects/_id/sequence-labeling/: index.vue
frontend/pages/projects/_id/sequence-to-sequence/: index.vue
frontend/pages/projects/_id/text-classification/: index.vue
frontend/services/application/example/: exampleApplicationService.ts
